<resources>
    <string name="app_name">LazyBunny</string>
    <string name="progress_doing">加载中...</string>
    <string name="wipe_cache_clear">缓存清理成功</string>
    <string name="money_hint">￥0</string>
    <string name="money_symbol">￥</string>
    <string name="income">收入</string>
    <string name="expend">支出</string>
    <string name="inexpensive">优惠</string>
    <string name="home_title">首页</string>
    <string name="order_title">订单</string>
    <string name="my_title">我的</string>
    <string name="myfragment_editinfo">编辑资料</string>
    <string name="myfragment_systemmsg">系统消息</string>
    <string name="myfragment_business_order">商家订单</string>
    <string name="myfragment_comment">我的评价</string>
    <string name="myfragment_shipping_address">配送地址</string>
    <string name="myfragment_my_order">订单</string>
    <string name="myfragment_integral">积分</string>
    <string name="myfragment_collect">收藏</string>
    <string name="myfragment_current_account">现金账户</string>
    <string name="myfragment_logout">退出当前账户</string>
    <string name="exit_des">再按一次退出程序</string>
    <string name="login_des">登录中...</string>
    <string name="submiting">提交中...</string>
    <string name="submit_success">提交成功</string>
    <string name="more">更多</string>
    <string name="systemmsg">系统消息</string>
    <string name="guesslike">猜你喜欢</string>
    <string name="editinfo">编辑资料</string>
    <string name="editinfo_edithead">修改头像</string>
    <string name="editinfo_nickname">昵称</string>
    <string name="editinfo_passwordr">密码</string>
    <string name="editinfo_phone">手机</string>
    <string name="editinfo_name_des">昵称不能为空</string>
    <string name="editinfo_name_des1">昵称位数不能超过14位</string>
    <string name="editinfo_head_success">更换头像成功</string>
    <string name="editinfo_success">修改成功</string>
    <string name="editinfo_tel_des">手机号格式不正确</string>
    <string name="editinfo_tel_des1">请输入手机号</string>
    <string name="editinfo_code_des">请输入验证码 </string>
    <string name="editinfo_code_release">重新发送</string>
    <string name="editinfo_pswd_des">密码为6-15位字母和数字</string>
    <string name="editinfo_pswd_des1">密码中必须包含字母</string>
    <string name="edit_nickname">昵称</string>
    <string name="edit_save">保存修改</string>
    <string name="edit_input_nickname">请输入昵称</string>
    <string name="edit_phone">旧手机</string>
    <string name="edit_new_phone">新手机</string>
    <string name="edit_phone_password">密码</string>
    <string name="edit_phone_code">验证码	</string>
    <string name="edit_phone_hint_phone">请输入旧手机号</string>
    <string name="edit_phone_hint_new_phone">请输入新手机号</string>
    <string name="edit_phone_hint_password">请输入密码</string>
    <string name="edit_phone_hint_code">请输入验证码</string>
    <string name="edit_phone_get_code">获取验证码</string>
    <string name="edit_phone_submit">提交</string>
    <string name="businessorder_classify">分类</string>
    <string name="businessorder_state">状态</string>
    <string name="item_order_finished">已完成</string>
    <string name="item_order_ordertime">下单时间</string>
    <string name="businessorderdetails_amount">数量</string>
    <string name="businessorderdetails_total">总计</string>
    <string name="businessorderdetails_ordernumber">订单号</string>
    <string name="businessorderdetails_consumercode">消费码</string>
    <string name="businessorderdetails_putconsumercode">（请输入或扫描二维码）</string>
    <string name="businessorderdetails_phone">手机</string>
    <string name="businessorderdetails_odertime">下单时间</string>
    <string name="businessorderdetails_paytime">支付时间</string>
    <string name="businessorderdetails_hours_of_use">使用时间</string>
    <string name="businessorderdetails_hours_of_integral">使用积分</string>
    <string name="businessorderdetails_hours_amountpaid">实付金额</string>
    <string name="businessorderdetails_btn_putconsumercode">输入消费码</string>
    <string name="shippingaddressactivity">配送地址</string>
    <string name="shippingaddressactivity_addadress">新增配送地址</string>
    <string name="item_shippingaddress_default">默认</string>
    <string name="addshippingaddress_region">地区</string>
    <string name="addshippingaddress_address">地址</string>
    <string name="addshippingaddress_phone">手机</string>
    <string name="addshippingaddress_name">姓名</string>
    <string name="addshippingaddress_postcode">邮编</string>
    <string name="addshippingaddress_default">默认</string>
    <string name="addshippingaddress_save">保存</string>
    <string name="addshippingaddress_input_region">请输入地区</string>
    <string name="addshippingaddress_input_address">请输入地址</string>
    <string name="addshippingaddress_input_phone">请输入手机</string>
    <string name="addshippingaddress_input_name">请输入姓名</string>
    <string name="addshippingaddress_input_postcode">请输入邮编</string>
    <string name="translate">翻译助手</string>
    <string name="translate_hint">请输入中文···</string>
    <string name="translate_content_hint">请输入翻译内容</string>
    <string name="translate_text">中文 </string>
    <string name="translate_language">语言</string>
    <string name="translate_translate">翻译</string>
    <string name="translate_result">翻译结果</string>
    <string name="translate_ing">翻译中...</string>
    <string name="SelectLanguage_chinese">中文</string>
    <string name="translate_chinese">中文</string>
    <string name="SelectLanguage_english">English</string>
    <string name="translate_english">英文</string>
    <string name="SelectLanguage_japanese">日本語</string>
    <string name="translate_japanese">日语</string>
    <string name="SelectLanguage_arab">العربية</string>
    <string name="translate_arab">阿拉伯语</string>
    <string name="SelectLanguage_korea">한국어</string>
    <string name="translate_korea">韩语</string>
    <string name="SelectLanguage_philippines">Pilipino</string>
    <string name="translate_philippines">菲律宾语</string>
    <string name="SelectLanguage_indonesia">Indonesia</string>
    <string name="translate_indonesia">印尼语</string>
    <string name="SelectLanguage_spain">espanol</string>
    <string name="translate_spain">西班牙语</string>
    <string name="SelectLanguage_italy">In Italia</string>
    <string name="translate_italy">意大利语</string>
    <string name="more_about_us">关于我们</string>
    <string name="more_langswitcher">语言切换</string>
    <string name="more_feedback">意见反馈</string>
    <string name="more_richscan">扫一扫</string>
    <string name="more_version_updating">版本更新</string>
    <string name="more_help">帮助中心</string>
    <string name="more_wipe_cache">清除缓存</string>
    <string name="all_item_hot">热门</string>
    <string name="all_item_halal_food">清真美食</string>
    <string name="login_name_hint">昵称/姓名</string>
    <string name="login_name">用户名</string>
    <string name="login_pswd_hint">请输入密码</string>
    <string name="login_pswd">密码</string>
    <string name="login">登陆</string>
    <string name="login_forget_pswd">忘记密码</string>
    <string name="login_register">注册</string>
    <string name="login_name_des">请输入昵称/姓名</string>
    <string name="register_phone_hint">请输入手机号</string>
    <string name="register_phone">手机</string>
    <string name="register_name_hint">请输入用户名</string>
    <string name="register_name">昵称</string>
    <string name="register_code_hint">请输入验证码</string>
    <string name="register_code">验证码</string>
    <string name="register">注册</string>
    <string name="register_get_code">获取验证码</string>
    <string name="register_pswd_des">请输入8位以内用户名</string>
    <string name="register_success">注册成功</string>
    <string name="register_email">邮箱</string>
    <string name="forget_pswd">密码重置</string>
    <string name="forget_pswd_newpswd">新密码</string>
    <string name="forget_pswd_newpswd_hint">请输入新密码</string>
    <string name="favorable">优惠买单</string>
    <string name="favorable_expendamount">消费总额</string>
    <string name="favorable_use_integral">使用积分</string>
    <string name="favorable_reality_money">实付金额</string>
    <string name="favorable_deduction">抵扣</string>
    <string name="favorable_confirm_payment">确认支付</string>
    <string name="grouporder">团购订单</string>
    <string name="grouporder_count">数量</string>
    <string name="grouporder_total">总计</string>
    <string name="grouporder_phone">手机</string>
    <string name="grouporder_use_integral">使用积分</string>
    <string name="grouporder_reality_money">实付金额</string>
    <string name="grouporder_deduction">抵扣</string>
    <string name="grouporder_submit_order">提交订单</string>
    <string name="grogshop_name">名称</string>
    <string name="grogshop_type">房型</string>
    <string name="grogshop_date">日期</string>
    <string name="grogshop_unit_price">单价</string>
    <string name="grogshop_pay">应付</string>
    <string name="grogshop_count">数量</string>
    <string name="grogshop_total">总计</string>
    <string name="grogshop_phone">手机</string>
    <string name="grogshop_linkman">联系人</string>
    <string name="grogshop_remark">备注</string>
    <string name="grogshop_fill_in">填写其他要求</string>
    <string name="grogshop_use_integral">使用积分</string>
    <string name="grogshop_deduction">抵扣</string>
    <string name="grogshop_reality_money">实付金额</string>
    <string name="grogshop_submit_order">提交订单</string>
    <string name="jifen_init">请输入积分</string>
    <string name="hotel_ruzhu">入住</string>
    <string name="hotel_likai">离开</string>
    <string name="hotel_des">晚</string>
    <string name="sort_one">智能排序</string>
    <string name="sort_two">离我最近</string>
    <string name="sort_three">口碑最好</string>
    <string name="sort_four">人气最高</string>
    <string name="sort">排序</string>
    <string name="my_order_pop_all">全部</string>
    <string name="my_order_pop_group">团购</string>
    <string name="my_order_pop_daigou">代购</string>
    <string name="my_order_pop_hotel">酒店</string>
    <string name="my_order_pop_await_pay">待支付</string>
    <string name="my_order_pop_await_consumption">待消费</string>
    <string name="my_order_pop_await_remark">待点评</string>
    <string name="my_order_pop_finish">已完成</string>
    <string name="my_order_pop_cancel">已取消</string>
    <string name="all_item">全部分类</string>
    <string name="comment_list">全部评论</string>
    <string name="post_comment">发布评论</string>
    <string name="post_comment_hint_txt">给个好评是对我们的支持</string>
    <string name="post_comment_txt">请说些什么吧^-^</string>
    <string name="post_comment_grade">评分</string>
    <string name="post_comment_submit">提交</string>
    <string name="uploading">上传中...</string>
    <string name="release_success">发布成功</string>
    <string name="takeawayorder">外卖订单</string>
    <string name="takeawayorder_shipping_rates">配送费</string>
    <string name="takeawayorder_total">总计</string>
    <string name="takeawayorder_transport_time">送达时间</string>
    <string name="takeawayorder_phone">手机</string>
    <string name="takeawayorder_linkman">联系人</string>
    <string name="takeawayorder_remark">备注</string>
    <string name="takeawayorder_fill_in">填写其他要求</string>
    <string name="takeawayorder_use_integral">使用积分</string>
    <string name="takeawayorder_deduction">抵扣</string>
    <string name="takeawayorder_reality_money">实付金额</string>
    <string name="takeawayorder_submit_order">提交订单</string>
    <string name="grouporder_pay_count">数量</string>
    <string name="grouporder_pay_total">总计</string>
    <string name="grouporder_pay_order_number">订单号</string>
    <string name="grouporder_pay_consumption_code">消费码</string>
    <string name="grouporder_pay_phone">手机</string>
    <string name="grouporder_pay_order_time">下单时间</string>
    <string name="grouporder_pay_paytime">支付时间</string>
    <string name="grouporder_pay_use_time">使用时间</string>
    <string name="grouporder_pay_use_integral">使用积分</string>
    <string name="grouporder_pay_deduction">抵扣</string>
    <string name="grouporder_pay_reality_money">实付金额</string>
    <string name="grouporder_pay_pay_order">支付订单</string>
    <string name="grogshop_pay_order">酒店订单</string>
    <string name="grogshop_pay_name">名称</string>
    <string name="delect_dialog">确认删除</string>
    <string name="delect_dialog_yes">确认</string>
    <string name="delect_dialog_no">取消</string>
</resources>