<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical" >

    <include layout="@layout/include_title_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_leftandright" >

            <TextView
                style="@style/text_44_black_medium"
                android:text="@string/register_phone" />

            <EditText
                style="@style/text_66_black_medium"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/nothing"
                android:gravity="right"
                android:hint="@string/register_phone_hint" />
        </LinearLayout>

        <View style="@style/line_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_leftandright" >

            <TextView
                style="@style/text_44_black_medium"
                android:text="@string/register_code" />

            <EditText
                style="@style/text_66_black_medium"
                android:layout_width="0dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/nothing"
                android:gravity="right"
                android:hint="@string/register_code_hint" />

            <TextView
                style="@style/text_white_medium"
                android:background="@drawable/code_bg"
                android:text="@string/register_get_code" />
        </LinearLayout>

        <View style="@style/line_horizontal" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_leftandright" >

            <TextView
                style="@style/text_44_black_medium"
                android:text="@string/forget_pswd_newpswd" />

            <EditText
                style="@style/text_66_black_medium"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/nothing"
                android:gravity="right"
                android:hint="@string/forget_pswd_newpswd_hint" />
        </LinearLayout>

        <View style="@style/line_horizontal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/fillet_10_green_bg"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>

</LinearLayout>