<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical" >

    <include layout="@layout/include_title_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_leftandright" >

            <TextView
                style="@style/text_44_black_medium"
                android:text="@string/register_phone" />

            <EditText
                android:id="@+id/phone"
                style="@style/text_66_black_medium"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/nothing"
                android:gravity="right"
                android:inputType="phone"
                android:hint="@string/register_phone_hint" />
        </LinearLayout>

        <View style="@style/line_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_leftandright" >

            <TextView
                style="@style/text_44_black_medium"
                android:text="@string/register_code" />

            <EditText
                android:id="@+id/verification"
                style="@style/text_66_black_medium"
                android:layout_width="0dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:background="@color/nothing"
                android:gravity="right"
                android:inputType="number"
                android:hint="@string/register_code_hint" />

            <TextView
                android:id="@+id/getverification"
                style="@style/text_white_medium"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:background="@drawable/code_bg"
                android:text="@string/register_get_code" />
        </LinearLayout>

        <View style="@style/line_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_leftandright" >

            <TextView
                style="@style/text_44_black_medium"
                android:text="@string/register_name" />

            <EditText
                android:id="@+id/nickname"
                style="@style/text_66_black_medium"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/nothing"
                android:gravity="right"
                android:hint="@string/register_name_hint" />
        </LinearLayout>

        <View style="@style/line_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/padding_leftandright" >

            <TextView
                style="@style/text_44_black_medium"
                android:text="@string/login_pswd" />

            <EditText
                android:id="@+id/password"
                style="@style/text_66_black_medium"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@color/nothing"
                android:gravity="right"
                android:hint="@string/login_pswd_hint" />
        </LinearLayout>

        <View style="@style/line_horizontal" />

        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/fillet_10_green_bg"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />
    </LinearLayout>

</LinearLayout>