<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            style="@style/text_44_black_medium"
            android:padding="@dimen/padding_leftandright"
            android:text="@string/delect_dialog" />

        <View style="@style/line_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/no"
                style="@style/text_44_black_medium"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding_leftandright"
                android:text="@string/delect_dialog_no" />

            <View style="@style/line_vertical" />
            
            <TextView
                android:id="@+id/yes"
                style="@style/text_44_black_medium"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/padding_leftandright"
                android:text="@string/delect_dialog_yes" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>