<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <include layout="@layout/include_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/padding_leftandright" >

        <TextView
            style="@style/text_44_black_medium"
            android:text="@string/edit_nickname" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right|center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/nickname"
                style="@style/text_7b_black_medium"
                android:layout_width="match_parent"
                android:background="@color/white"
                android:gravity="right"
                android:hint="@string/edit_input_nickname" />

        </LinearLayout>
    </LinearLayout>

    <View style="@style/line_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="15dp"
        android:paddingLeft="23dp"
        android:paddingRight="23dp"
        android:paddingTop="15dp" >

        <Button
            android:id="@+id/save"
            style="@style/text_44_black_medium"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/fillet_10_green_bg"
            android:text="@string/edit_save"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>